# RAG-QA-APP

./: README.md  app.py  pyproject.toml  rag_utils.py  run.sh
logs/: app_log
