[project]
name = "rag-qa-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "groq>=0.32.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
]
